[package]
name = "qtty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
env_logger = "0.10.1"
log = "0.4.20"
pam-client = "0.5.0"
pty-process = { version = "0.4.0", features = ["async", "tokio"] }
pwd-grp = "0.1.1"
s2n-quic = "1.32.0"
serde = { version = "1.0.195", features = ["derive"] }
termios = "0.3.3"
tokio = { version = "1.35.1", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
toml = "0.8.8"
